<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AJobMate</string>
    <string name="no_offers">No job offers entered</string>
    <string name="no_tasks">No tasks entered</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="archive_all">Archive all</string>
    <string name="delete_all">Delete all</string>
    <string name="unarchive_all">Unarchive all</string>
    <string name="unarchive">Unarchive</string>
    <string name="confirm_archive_all_offers">Pressing archive will archive all offers</string>
    <string name="confirm_unarchive_all_offers">Pressing archive will unarchive all offers</string>
    <string name="confirm_unarchive_all_tasks">Pressing archive will unarchive all tasks</string>
    <string name="confirm_archive_all_tasks">Pressing archive will archive all tasks</string>
    <string name="confirm_delete_all_offers">Pressing delete will delete all offers</string>
    <string name="confirm_delete_all_tasks">Pressing delete will delete all tasks</string>
    <string name="confirm_delete_all_archived_tasks">Pressing delete will delete all archived tasks</string>
    <string name="confirm_delete_all_archived_offers">Pressing delete will delete all archived offers</string>
    <string name="enter_offer_position">Enter offer position</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="ok">OK</string>
    <string name="enter_at_least_position_and_employer">Enter at least position and employer!</string>
    <string name="enter_at_least_description_of_the_task">Enter at least description of the task!</string>
    <string name="archive_task">Archive task</string>
    <string name="unarchive_task">Unarchive task</string>
    <string name="delete_task">Delete task</string>
    <string name="loading">Loading..</string>
    <string name="archive_all_offers_confirmation">Archive all offers?</string>
    <string name="unarchive_all_offers_confirmation">Unarchive all offers?</string>
    <string name="unarchive_all_tasks_confirmation">Unarchive all tasks?</string>
    <string name="archive_all_tasks_confirmation">Archive all tasks?</string>
    <string name="delete_all_offers_confirmation">Delete all offers?</string>
    <string name="delete_all_tasks_confirmation">Delete all tasks?</string>
    <string name="delete_all_archived_tasks_confirmation">Delete all archived tasks?</string>
    <string name="none">none</string>
    <string name="start_time">start time: </string>
    <string name="endtime">end time: </string>
    <string name="delete_offer">Delete offer</string>
    <string name="unarchive_offer">Unarchive offer</string>
    <string name="all_offers">All offers</string>
    <string name="notification_time">notification time: </string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="add_new">Add new..</string>
    <string name="add_task">Add task</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="contact_added">Contact added</string>
    <string name="contact_added_msg">Contact added</string>
    <string name="contact_exists">Contact exists</string>
    <string name="edit">Edit</string>
    <string name="edit_task">Edit task</string>
    <string name="contact_exists_msg">Contact already exists on your device</string>
    <string name="offer_exists">Offer exists</string>
    <string name="bad_start_end_time">Start time later than the end time</string>
    <string name="bad_start_end_time_msg">Set the start time earlier than the end time</string>
    <string name="bad_time">Bad time</string>
    <string name="bad_time_msg">Set the time later than now</string>
    <string name="call_employer">Call employer</string>
    <string name="send_email_to_employer">Send email to employer</string>
    <string name="offer_exists_msg">Offer with such position and employer already exists</string>
    <string name="phone_number_missing">Phone number is missing</string>
    <string name="phone_number_missing_msg">You need to provide phone number to add employer to contacts</string>
    <string name="no_network">No network connection available</string>
    <string name="no_network_msg">Enable any of network data connections</string>
    <string name="employer">Employer</string>
    <string name="description">Description</string>
    <string name="position">Position</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="hint_offer_edit">Press buttons for actions</string>
    <string name="hint_task_edit">Press buttons for actions</string>
    <string name="get_location">Get \n location</string>
    <string name="reload">Reload</string>
    <string name="my_tasks_hint">Press or long press list items and buttons for actions</string>
    <string name="related_offer">Related offer</string>
    <string name="tasks_for_this_offer">tasks for this offer</string>
    <string name="show_tasks">Show tasks</string>
    <string name="import_task">Import</string>
    <string name="my_offers_hint">Press or long press list items and buttons for actions</string>
    <string name="hint_my_archived_offers">Press or long press list items and option buttons for actions</string>
    <string name="hint_my_tasks_archived">Press or long press list items and option buttons for actions</string>
    <string name="edit_offer">Edit offer</string>
    <string name="archive_offer">Archive offer</string>
    <string name="do_not_set">Do not set</string>
    <string name="set">Set</string>
    <string name="not_set">Not set</string>
    <string name="set_alarm_time">Set alarm time</string>
    <string name="set_end_time">Set end time</string>
    <string name="set_start_time">Set start time</string>

    <string-array name="options">
        <item>My Offers</item>
        <item>Online offers</item>
        <item>Tasks</item>
        <item>Alerts</item>
        <item>Documents</item>
        <item>History</item>
        
    </string-array>
    <string-array name="offer_context_options">
        <item>@string/edit_offer</item>
        <item>@string/archive_offer</item>
        <item>@string/call_employer</item>
        <item>@string/send_email_to_employer</item>
        <item>@string/show_tasks</item>
        <item>@string/add_task</item>
        <item>@string/add_to_contacts</item>
    </string-array>

    <string name="more_info">More info</string>
    <string name="less_info">Less info</string>
    <string name="start_time_not_provided">Start time not provided</string>
    <string name="end_time_not_provided">End time not provided</string>
    <string name="notification_time_not_provided">Notification time not provided</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>