<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/offers_panel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/optionPanel"
        android:layout_alignParentTop="true" >

        <ListView
            android:id="@+id/offers"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_offers"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/optionPanel"
        android:background="@color/option_panel_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hint" >

        <Button
            android:id="@+id/add"
            style="@style/NormalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/add_new" />

        <Button
            android:id="@+id/archiveAll"
            style="@style/NormalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/archive_all" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/option_panel_bg"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/my_offers_hint" />

</RelativeLayout>