<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tasks_panel"
    android:layout_width="fill_parent"
    android:padding="@dimen/small_margin"
    android:layout_height="fill_parent" >

    <Spinner
        android:id="@+id/offers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="32dp"
         />

    <FrameLayout
        android:id="@+id/tasks_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/optionPanel"
        android:layout_below="@+id/offers" >

        <ListView
            android:id="@+id/tasks"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_tasks"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/optionPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/hint" >

        <Button
            android:id="@+id/add"
            style="@style/NormalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/add_new" />

        <Button
            android:id="@+id/archiveAll"
            style="@style/NormalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/archive_all" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/my_tasks_hint" />

</RelativeLayout>