<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/offers_panel" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<FrameLayout android:layout_alignParentTop="true"
		android:layout_above="@+id/optionPanel" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ListView android:id="@+id/offers" android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView android:id="@+id/empty" android:layout_width="fill_parent"
			android:visibility="gone" android:layout_height="wrap_content"
			android:text="@string/no_offers" />
	</FrameLayout>

	<LinearLayout android:id="@+id/optionPanel"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_above="@+id/hint">
		<Button android:id="@+id/deleteAll" android:layout_height="wrap_content"
            android:text="@string/delete_all" android:layout_width="wrap_content" />
		<Button android:id="@+id/unarchiveAll" android:layout_height="wrap_content"
            android:text="@string/unarchive_all" android:layout_width="wrap_content" />
	</LinearLayout>

	<TextView android:id="@+id/hint" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
		android:text="Press or long press list items, option buttons, eventually MENU hard key for options" />

</RelativeLayout>
