<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/offer_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tasksLayout"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/position"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextLargeHeader" />

            <TextView
                android:id="@+id/employer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextNormal"/>

            <Button
                android:id="@+id/phone_nr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                style="@style/NormalButton" />

            <Button
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                style="@style/NormalButton"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextNormal" />

            <Button
                android:id="@+id/gps_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                style="@style/NormalButton"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextNormal" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/tasksLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin"
        android:background="@color/option_panel_bg"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/show_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            style="@style/NormalButton"
            android:text="@string/show_tasks" />

        <Button
            android:id="@+id/addTaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            style="@style/NormalButton"
            android:text="@string/add_task" />
        <Button
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            style="@style/NormalButton"
            android:text="@string/edit" />
    </LinearLayout>

    

</RelativeLayout>